--- a/lab12/lab12.csproj
+++ b/lab12/lab12.csproj
@@ -44,9 +44,16 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\laba11\forlaba11\forlaba11.csproj">
+      <Project>{40a51913-9a15-4cd5-8c1b-43d65ee7f082}</Project>
+      <Name>forlaba11</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
